<resources>
    <string name="app_name">Cefy</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Start screen related-->
    <string name="desc1">Beta sign up for credit card</string>
    <string name="desc2">Make international transactions on Google Play store, App store, Airbnb, Netflix and more</string>
    <string name="desc3">No annual fee, No late fee, No hidden fee</string>
    <string name="start">START</string>
    <string name="terms">Terms</string>
    <string name="privacy">Privacy Policy</string>

    <!--Register screen related-->
    <string name="name_hint_text">Full Name</string>
    <string name="email_hint_text">Email Address</string>
    <string name="phone_hint_text">Mobile Number</string>
    <string name="proceed">PROCEED</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phone">Invalid phone number</string>

    <!--main screen related-->
    <string name="info_text">We analyze your transactional and promotional SMS, Facebook and Linkedin profiles to issue you a Credit Card. Kindly go through the steps below to give us required access: </string>
    <string name="facebook_app_id">1706204626317412</string>
    <string name="fb_login_protocol_scheme">fb1706204626317412</string>
    <string name="fb_text">Login with Facebook and allow permissions for friend list, email and public profile</string>
    <string name="fb_error_text">Kindly login again with all permissions</string>
    <string name="sms_error_text">Kindly provide sms permissions from app settings</string>
    <string name="in_text">Login with LinkedIn to give us your work history</string>
    <string name="sms_text">Allow us to read your promotional and transactional messages</string>

</resources>
